k8s_practice_yml/istio_conf/poc-egress/se-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-api
  namespace: test
spec:
  hosts:
  - www.google.com
  ports:
  - number: 443
    name: https
    protocol: TLS
  resolution: DNS  # Use DNS resolution for external services other options include NONE, STATIC, and PASSTHROUGH
  location: MESH_EXTERNAL
  # Add this to ensure endpoints are discovered
  # endpoints:
  # - address: www.google.com istio-ststem
