k8s_practice_yml/istio_conf/poc-egress/vs-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: route-to-egress
  namespace: test
spec:
  hosts:
  - www.google.com
  gateways:
  - mesh
  - istio-system/egress-gateway  # Use full namespace/gateway name
  tls:  # Use tls protocol since you're using TLS PASSTHROUGH
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - www.google.com
    route:
    - destination:
        host: istio-egress-gwt.istio-system.svc.cluster.local
        port:
          number: 443
  - match:
    - gateways:
      - istio-system/egress-gateway
      port: 443
      sniHosts:
      - www.google.com
    route:
    - destination:
        host: www.google.com
        port:
          number: 443
